--- a/src/components/viewDogs/gallery.css
+++ b/src/components/viewDogs/gallery.css
@@ -214,6 +214,6 @@
   }
   #title{
 
-    font-size: 4rem ;
+    font-size: 2.5rem ;
   }
 }
